Added ANFRepo and updated existing models to use it
The ANFRepo class was introduced as a global repository class for all repositories, making it easier to use and manage them. The existing models (ANFStatementModel, NarrativeCircumstanceModel, PerformanceCircumstanceModel, RequestCircumstanceModel) were updated to use the ANFRepo class. All models now save their components directly via the repositories in ANFRepo class, instead of creating new instances.